<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.safaanabil.hichhecker.AddTrip">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/ghost_white"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/trip2"
        android:id="@+id/bag"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/bag"
        android:layout_toRightOf="@+id/bag"
        android:text="Add Trip"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/ghost_white"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/d"/>
        <!-- Eidt Text for Date-->
        <EditText
            android:id="@+id/editdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/price_num"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/price_num"
            android:background="@android:color/transparent"
            android:hint="@string/date"
            android:inputType="date"
            android:padding="5dp"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/d"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_Country"
            android:layout_below="@id/d"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/fc"/>
        <!-- Eidt Text for from country -->
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/view6"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:entries="@array/country"
            android:padding="5dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/fc"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/view6" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_City"
            android:layout_below="@id/fc"
            android:textColor="@color/gold"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:id="@+id/fcy"/>
        <!-- Eidt Text for from city -->
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view7"
            android:layout_toEndOf="@+id/fc"
            android:layout_toRightOf="@+id/fc"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:entries="@array/city"
            android:padding="5dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/fcy"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/view7" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_Country"
            android:layout_below="@id/fcy"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tc"/>
        <!-- Eidt Text for to country -->
        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/view8"
            android:layout_alignLeft="@+id/spinner2"
            android:layout_alignStart="@+id/spinner2"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:entries="@array/country"
            android:padding="5dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tc"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/view8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_City"
            android:layout_below="@id/tc"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:id="@+id/tcy"/>
        <!-- Eidt Text for to city-->
        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tcy"
            android:layout_alignBottom="@+id/tcy"
            android:layout_toEndOf="@+id/fcy"
            android:layout_toRightOf="@+id/fcy"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:entries="@array/city"
            android:padding="5dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tcy"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/view9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_below="@id/tcy"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/ph"/>
        <!-- Eidt Text for Phone number-->
        <EditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view9"
            android:layout_toEndOf="@+id/ph"
            android:layout_toRightOf="@+id/ph"
            android:background="@android:color/transparent"
            android:hint="@string/phone"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ph"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/view2" />

        <TextView
            android:id="@+id/pr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view2"
            android:padding="5dp"
            android:text="@string/price"
            android:textColor="@android:color/holo_purple"
            android:textSize="18sp"
            android:textStyle="bold" />
        <!-- Eidt Text for price-->
        <EditText
            android:id="@+id/price_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner"
            android:layout_below="@+id/view2"
            android:background="@android:color/transparent"
            android:hint="@string/price"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@android:color/holo_purple"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pr"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_below="@id/pr"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/tp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button"
            android:layout_toEndOf="@+id/pr"
            android:layout_toRightOf="@+id/pr"
            android:backgroundTint="#d11f08"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:entries="@array/types"
            android:padding="5dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tp"
            android:layout_marginTop="15dp"
            android:textColor="@color/dark_brown"
            android:background="@drawable/homebutton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="Add"
            android:id="@+id/button"
            android:onClick="addd"
             />

    </RelativeLayout>
</LinearLayout>
 </ScrollView>
